gateways/virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-VirSvc
spec:
  hosts:      # hosts of gateways and VS must be same, then it work fine
  - "deep.com"
  - app-svc.prod.svc.cluster.local #DNS name

  gateways:
  - istio-ingress-gateway    # name of gateway

  http:
  - name: virtual-svc-routes
  - route:
    - destination:
        host: app-svc.prod.svc.cluster.local
        subset: app-svc-subset
      weight: 25

    - destination:
        host: app2-svc.prod.svc.cluster.local
        subset: app2-svc-subset
      weight: 75

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule
spec:
  host: app-svc.prod.svc.cluster.local
  subsets:
  - name: app-svc-subset  #this name provided in subset of Virtual servce
    labels:
      version: v1
      app: app
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule
spec:
  host: app2-svc.prod.svc.cluster.local
  subsets:
  - name: app2-svc-subset  #this name provided in subset of Virtual servce
    labels:
      version: v1
      app: app2
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
